# the-oracle-intelligent-ai

./: .gitignore  pyproject.toml
brain/: google_calendar_agent.py  orchestrator_agent.py
brain/utilities/: azure_client.py  system_processes.py  system_prompts.py
data/: database.py  models.py
mcp_gmail_primary/: TUTORIAL.md  mcp_gmail_primary.py
memories/: conversation_manager.py  documentation.md  memory_manager.py  oracle.md
quality_check/: latency_check.py
servers/: browser.py
skills/extractor/: extract_image.py  extract_pdf.py  extractor.py
tools/: llm_client.py
tools/dhbw_email/: dhbw_database_queries.py  dhbw_email_api_calls.py
tools/gcalendar/: gcalendar_api_calls.py
tools/gmail/: gmail_api_calls.py  gmail_database_queries.py
tools/google/: auth.py  config.py
tools/internet_search/: search.py
tools/moodle/: moodle_manual.md  moodle_usage_examples.md
user_interface/chat_based/: chat.html
user_interface/voice_based/: architecture.html  script.js  style.css
voice/: effects.py  logger.py  stt.py  tts.py  tts_edge.py
