[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "edge-tts>=7.2.8",
    "elevenlabs>=2.44.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "openai>=2.28.0",
    "openai-whisper>=20250625",
    "pedalboard>=0.9.22",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "rapidfuzz>=3.14.3",
    "realtimestt>=0.3.104",
    "requests>=2.32.5",
    "simple-websocket>=1.1.0",
]
